--- a/app/sass/main.sass
+++ b/app/sass/main.sass
@@ -323,7 +323,8 @@ a
     position: relative
     z-index: 1
   &__title
-    font-size: em(45px)
+    // font-size: em(45px)
+    font-size: em(42px)
     margin: 0 0 em(7px)
     max-width: 640px
     font-weight: 900
@@ -548,11 +549,10 @@ a
 .advantages
   padding: 100px 0 120px
   &__title
-    max-width: 750px
     margin: 0 0 em(58px)
   &__list
     grid-template-columns: 1fr 1fr
-    grid-gap: 125px 200px
+    grid-gap: 125px 140px
 
 .advantage
   grid-template-columns: max-content 1fr
@@ -635,7 +635,7 @@ a
   overflow: hidden
   &__img-box
     width: 225px
-    max-height: 245px
+    height: 100%
   &__img
     width: 100%
     height: 100%
@@ -674,14 +674,14 @@ a
 .need
   padding: 110px 0
   >div
-    grid-template-columns: 1fr 640px
-    grid-column-gap: 105px
+    grid-template-columns: 2fr 3fr
+    grid-column-gap: 30px
   &__title
     margin: 0 0 em(8px)
     font-size: em(30px)
   &__btns
     display: flex
-    justify-content: space-between
+    justify-content: space-around
     align-items: center
   &__btn
     font-size: em(18px)
@@ -703,7 +703,7 @@ a
   padding: 125px 0
   >div
     grid-template-columns: max-content 1fr
-    grid-gap: 105px
+    grid-gap: 45px
     align-items: center
   &__text-side
     max-width: 325px
@@ -1158,8 +1158,8 @@ a
     top: 70px
     background-color: #fff
     border-radius: 30px
-    padding: 50px 30px
-    max-width: 300px
+    padding: 50px 24px
+    max-width: 320px
     border: 2px solid $blue
     line-height: 1.4
   &__text
